--- a/frontend/css/body.css
+++ b/frontend/css/body.css
@@ -27,7 +27,8 @@
 	color: #fff;
 	text-align: center;
 	background-size: cover;
-	padding: 5.5rem;
+	padding-top: 12.5rem;
+	padding-bottom: 12.5rem;
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
