--- a/frontend/css/body.css
+++ b/frontend/css/body.css
@@ -27,8 +27,8 @@
 	color: #fff;
 	text-align: center;
 	background-size: cover;
-	padding-top: 20.5rem;
-	padding-bottom: 20.5rem;
+	padding-top: 25.5rem;
+	padding-bottom: 25.5rem;
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
@@ -37,6 +37,7 @@
 .principal {
 	background-color: #7d1a0c;
 }
+
 .quemsomos {
 	background-color: #a84c4c;
 }
@@ -57,14 +58,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	font-size: 0.9rem;
+	font-size: 1.3rem;
 	justify-items: center;
 
 }
+
 .chamada__titulo {
-	color: #e93d50;
+	color: #25ff1e;
 	font-weight: 500;
-	font-size: 1.4rem;
+	font-size: 1.9rem;
 	margin-bottom: 0.3rem;
 }
 
@@ -74,9 +76,14 @@
 
 
 @media(min-width:768px) {
+
 	.corpos {
-		padding: 6rem 5% 0;
-		padding-bottom: 15rem;
+		color: #fff;
+		text-align: center;
+		background-size: cover;
+		padding-top: 18.5rem;
+		padding-bottom: 29.5rem;
+
 	}
 
 	.corpos__chamada {
@@ -92,28 +99,6 @@
 
 	.chamada__corpos__matricula {
 		display: none;
-	}
-
-	.corpos__lista {
-		grid-template-columns: repeat(5, 7rem);
-		grid-template-rows: 5.5rem 5.5rem 5.5rem;
-		gap: .8rem;
-	}
-
-
-	.corpos__lista li {
-		background-repeat: no-repeat;
-		background-size: 2rem 2rem;
-		background-position: top 1rem center;
-		padding-top: 2.5rem;
-	}
-
-	.corpos__lista .corpos--destaque {
-		order: -1;
-		grid-area: 1/1/span 3/3;
-		padding-top: 5.5rem;
-		background-size: 6rem 6rem;
-		background-position: top 3.6rem center;
 	}
 }
 
@@ -131,46 +116,6 @@
 		font-size: 2.5rem;
 	}
 
-	.corpos__lista {
-		grid-template-columns: repeat(6, 9.3rem);
-		grid-template-rows: 7.5rem 7.5rem;
-		margin-top: 1.5rem;
-		margin-bottom: 1.5rem;
-	}
-
-	.corpos__lista li {
-		background-repeat: no-repeat;
-		background-size: 3rem 3rem;
-		background-position: top 1rem center;
-		padding-top: 2.5rem;
-	}
-
-	.corpos__lista .corpos--destaque {
-		order: -1;
-		grid-area: 1/1/span 2/2;
-		padding-top: 6rem;
-		background-size: 6rem 6rem;
-		background-position: top 3.6rem center;
-	}
-
-	.corpos__lista .corpos--destaque2 {
-		order: -1;
-		grid-area: 1/4/span 2/5;
-		padding-top: 6rem;
-		background-size: 6rem 6rem;
-		background-position: top 3.6rem center;
-	}
-
-	.corpos__lista p {
-		font-size: .9rem;
-	}
-
-
-	.corpos--destaque2 .imagem-destaque2 {
-		width: 6rem;
-		height: 6rem;
-		margin-bottom: .8rem;
-	}
 }
 
 @media(min-width:1440px) {
